--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,48 @@
 asgiref==3.2.10
+autopep8==1.5.3
+bcrypt==3.1.7
+boto3==1.14.60
+botocore==1.17.60
+bson==0.5.10
+certifi==2020.6.20
+cffi==1.14.0
+chardet==3.0.4
+click==7.1.2
+defusedxml==0.6.0
 dj-database-url==0.5.0
-Django==3.1
+Django==3.1.1
 django-allauth==0.42.0
 django-countries==6.1.3
 django-crispy-forms==1.9.2
+django-storages==1.10
+dnspython==1.16.0
+docutils==0.15.2
+Flask==1.1.2
+Flask-Bcrypt==0.7.1
+Flask-PyMongo==2.3.0
+Flask-WTF==0.14.3
 gunicorn==20.0.4
+idna==2.9
+itsdangerous==1.1.0
+Jinja2==2.11.2
+jmespath==0.10.0
+MarkupSafe==1.1.1
 oauthlib==3.1.0
 Pillow==7.2.0
-psycopg2-binary==2.8.5
+psycopg2-binary==2.8.6
+pycodestyle==2.6.0
+pycparser==2.20
+pymongo==3.10.1
+python-dateutil==2.8.1
 python3-openid==3.2.0
 pytz==2020.1
+requests==2.24.0
 requests-oauthlib==1.3.0
+s3transfer==0.3.3
+six==1.15.0
 sqlparse==0.3.1
-stripe==2.50.0
+stripe==2.51.0
+toml==0.10.1
+urllib3==1.25.9
+Werkzeug==1.0.1
+WTForms==2.3.1
